src/widgets/about/history/style.module.scss
@use "@bigtablet/design-system/scss/token" as token;

.history {
	--container-width: 1200px;
	--container-max: min(var(--container-width), 95vw);
	--left-col: 172px;

	width: 100%;
	background: token.$color_background_primary;
	position: relative;
	padding-block: clamp(36px, 7vh, 72px);

	&::before {
		content: "";
		position: absolute;
		top: 0;
		bottom: 0;
		left: calc(50vw - var(--container-max) / 2 + var(--left-col) / 2);
		width: 2px;
		background: token.$text_inverse;
		border-radius: 1px;
	}
}

/** 단일 그리드: 연도(좌) + 내용(우) 나란히 배치 */
.history_grid {
	width: var(--container-max);
	margin: 0 auto;
	display: grid;
	grid-template-columns: var(--left-col) 1fr;
	column-gap: token.$spacing_4xl;
	align-items: start;
}

.history_years {
	@include token.flex_column;
	gap: token.$spacing_xs;
	position: sticky;
	top: 96px;
	z-index: 2;
}

.history_year_item {
	@include token.body_medium;
	background: transparent;
	border: none;
	padding: 0;
	text-align: left;
	color: token.$color_glass_border;
	cursor: pointer;
	transition: color token.$transition_fast, opacity token.$transition_fast;

	&.is_active {
		@include token.heading_3;
		color: token.$text_inverse;
	}
}

.history_right {
	@include token.flex_column;
	gap: token.$spacing_sm;
	transition: all token.$transition_slow;
}

.history_row {
	display: grid;
	grid-template-columns: 18px 1fr;
	column-gap: token.$spacing_sm;
	transition: all token.$transition_base;
}

.history_row_dot {
	width: 5px;
	height: 5px;
	margin-top: token.$spacing_xs;
	border-radius: token.$radius_full;
	background: token.$text_inverse;
	box-shadow: 0 0 0 2px token.$color_glass_light;
}

.history_row_body {
	@include token.flex_column;
	gap: 2px;
}

.history_row_title {
	@include token.heading_3;
	font-size: token.$font_size_base;
	color: token.$text_inverse;
}

.history_row_desc {
	@include token.body_regular;
	font-size: token.$font_size_sm;
	color: token.$color_glass_border;
	line-height: token.$line_height_relaxed;
}

@include token.tablet {
	.history {
		--left-col: 140px;
		padding-block: token.$spacing_6xl;
	}

	.history_grid {
		column-gap: token.$spacing_xl;
	}

	.history_year_item {
		font-size: token.$font_size_sm;
	}

	.history_row_title {
		font-size: token.$font_size_base;
	}

	.history_row_desc {
		font-size: token.$font_size_sm;
	}
}

@include token.mobile {
	.history {
		--left-col: 100px;
		padding-block: token.$spacing_3xl;

		&::before {
			display: none;
		}
	}

	.history_grid {
		grid-template-columns: 1fr;
		row-gap: token.$spacing_md;
	}

	.history_years {
		position: sticky;
		top: 64px;
		width: 100%;
		flex-direction: row;
		gap: token.$spacing_xs;
		overflow-x: auto;
		padding: token.$spacing_sm token.$spacing_lg;
		scrollbar-width: none;
		-ms-overflow-style: none;
		background: token.$color_background_primary;

		&::-webkit-scrollbar {
			display: none;
		}
	}

	.history_year_item {
		flex-shrink: 0;
		padding: token.$spacing_sm token.$spacing_md;
		border-radius: token.$radius_md;
		font-size: token.$font_size_sm;
		background: token.$color_glass_light;

		&.is_active {
			font-size: token.$font_size_base;
			background: token.$color_glass_border;
		}
	}

	.history_right {
		padding: 0 token.$spacing_lg;
	}

	.history_row {
		grid-template-columns: 14px 1fr;
		column-gap: token.$spacing_sm;
	}

	.history_row_dot {
		margin-top: token.$spacing_xs;
		width: 5px;
		height: 5px;
	}

	.history_row_title {
		font-size: token.$font_size_sm;
	}

	.history_row_desc {
		font-size: token.$font_size_xs;
	}
}

